Fix some spacings

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,15 +1,12 @@
-
 .App {
   width: 100%;
-  height: 100vh;
   margin: 0;
   display: flex;
-
+  height: 100vh;
+  background-color: #EDF0F2;
   position: relative;
   //justify-content: center;
   &__content{
-    background-color: #EDF0F2;
-    display: flex;
     flex-direction: column;
   }
 }
