--- a/src/pages/DriverDetails/DriverDetails.scss
+++ b/src/pages/DriverDetails/DriverDetails.scss
@@ -1,32 +1,38 @@
 .DriverDetails {
-  width:  calc(100vw - 307px);
   margin-left: 307px;
-  height: 100vh;
+  width:  calc(100vw - 307px);
+  height: calc(100vh - 192px);
   &__backbutton {
     margin: 33px 0 0 109px;
   }
   &__championtitle{
     float: left;
+    margin-top: 59px;
+    margin-left: 109px;
+
     &__year{
-      margin: 59px 0 0 109px;
+      //margin: 59px 0 0 109px;
       font-weight: bold;
       font-size: 14px;
       letter-spacing: 2.1px;
+      margin-bottom: 0px;
     }
     &__title{
-      margin-left: 109px;
+      //margin-left: 109px;
       margin-bottom: 0;
       font-size: 20px;
       font-weight: bold;
       color: #E6101A;
     }
     &__driverphoto{
-      margin: 22px 0 0 109px;
+      //margin: 22px 0 0 109px;
+      margin-top: 22px;
     }
     &__information{
       display: flex;
       flex-direction: row;
-      margin:17px 0 0 99px;
+      margin-top: 17px;
+      margin-bottom: 0px;
       align-items: center;
       &__number{
         font-size: 20px;
@@ -40,22 +46,29 @@
       }
     }
     &__helmet {
-      margin: 17px 0 0 157px;
+     margin-top: 17px;
+      margin-left: 48px;
     }
   }
-  &__information{
-    float: right;
-    margin: 59px 138.5px 0 0;
+  &__informationtable{
+    margin-top: 59px;
+    height: 489px;
     table {
+      margin-left: 385px;
       border-collapse: collapse;
       width: 536px;
     }
 
     th, td {
-      padding: 8px;
+      padding: 10px 0 10px;
       font-size: 20px;
       text-align: left;
       border-bottom: 1px solid #C2C8CB;
+    }
+    tr:nth-child(1){
+      th,td{
+        padding-top: 0;
+      }
     }
     td {
       font-weight: bold;
