--- a/src/pages/SeasonInformation/SeasonInformation.scss
+++ b/src/pages/SeasonInformation/SeasonInformation.scss
@@ -1,5 +1,5 @@
 .SeasonInformation {
-  width:  calc(100vw - 307px);
   margin-left: 307px;
-  height: 100vh;
+  width:  calc(100vw - 307px);
+  height: calc(100vh - 260px);
 }
