--- a/src/partials/Footer/Footer.scss
+++ b/src/partials/Footer/Footer.scss
@@ -1,25 +1,35 @@
 @import url(//db.onlinewebfonts.com/c/6a9c6944fe8451dd397fe9d0763a4c88?family=OCR+A+Std);
 
 .Footer {
-  margin: 0 0 0 307px;
-  position: relative;
-  display: flex;
+  margin-left: 307px;
+  width:  calc(100vw - 307px);
   height: 159px;
   background-image: linear-gradient(rgba(0,0,0,0) 35%, #000000 230%);
-  background-color: #EDF0F2;
+  display: flex;
+  //&__elements {
+  //  //position: relative;
+  //  //display: flex;
+  //  height:100%;
+  //  background-image: linear-gradient(rgba(0,0,0,0) 25%, #000000 230%);
+  //}
   &__logo {
     width: 58.5px;
     height: 14.62px;
-    margin: 96px  0 0 109px;
+    margin-top: 96px;
+    margin-left: 109px;
   }
   &__logokutia{
-    margin: 95.8px 0 0 585.5px;
+    width: 20px;
+    height: 22px;
+    margin-top: 96px;
+    margin-left: 585px;
   }
   &__kutia {
-
-    margin: 101px 0 0 26px ;
+  //  margin: 101px 0 0 26px ;
     font-family: "OCR A Std";
     font-size: 10px;
+    margin-top: 99px;
+    margin-left: 26px;
   }
 
 }
